Google OAuth fro protected routes

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 MONGODB_URL = mongodb+srv://lorenzodev:x0zQ1a62GXNc0L1p@kist-park.smnii.mongodb.net/?retryWrites=true&w=majority&appName=kist-park
+GOOGLE_CLIENT_ID = 82154648172-cibo8e72er0gkifm640gv53i15f61gln.apps.googleusercontent.com
 
 CLOUDINARY_CLOUD_NAME = dcjgvkvpo
 CLOUDINARY_API_KEY = 499664615423767
 CLOUDINARY_API_SECRET = idiAMaToUYG3-c5Y2JEWd3mmP7U
 
+JWT_SECRET = 1234567890
