--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 REACT_APP_GOOGLE_CLIENT_ID = 82154648172-cibo8e72er0gkifm640gv53i15f61gln.apps.googleusercontent.com
+
+REACT_APP_API_URL = https://kist-park-admin.onrender.com
