--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ CLOUDINARY_CLOUD_NAME = dcjgvkvpo
 CLOUDINARY_API_KEY = 499664615423767
 CLOUDINARY_API_SECRET = idiAMaToUYG3-c5Y2JEWd3mmP7U
 
-JWT_SECRET = 1234567890
+ALLOWED_ORIGINS = http://localhost:3000,http://localhost:4000,https://kist-park.vercel.app,https://firstkistpark.com,https://kist-park-admin.netlify.app,
