--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,11 @@ CLOUDINARY_CLOUD_NAME = dcjgvkvpo
 CLOUDINARY_API_KEY = 499664615423767
 CLOUDINARY_API_SECRET = idiAMaToUYG3-c5Y2JEWd3mmP7U
 
-ALLOWED_ORIGINS = http://localhost:3000/kistadmin,http://localhost:3000,http://localhost:4000/kistadmin,https://kist-park.vercel.app,https://firstkistpark.com,https://kist-park-admin.netlify.app,
+ALLOWED_ORIGINS = http://localhost:3000/firstkistpark,http://localhost:3000,http://localhost:4000/firstkistpark,https://kist-park.vercel.app,https://firstkistpark.com,https://kist-park-admin.netlify.app,https://steerhub.batstateu.edu.ph/firstkistpark,
+
+# Sample Proxy Settings
+# HTTP_PROXY=http://proxy.university.edu:8083
+# HTTPS_PROXY=http://proxy.university.edu:8083
+
+# sample proxy settings with authentication
+# HTTP_PROXY=http://username:password@proxy.university.edu:8083
