--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 REACT_APP_GOOGLE_CLIENT_ID = 82154648172-cibo8e72er0gkifm640gv53i15f61gln.apps.googleusercontent.com
 
-# REACT_APP_API_URL = http://localhost:8080
+REACT_APP_API_URL = http://localhost:8083
 
-REACT_APP_API_URL = https://steerhub.batstateu.edu.ph/kistpark-backend
+# REACT_APP_API_URL = https://steerhub.batstateu.edu.ph/kistpark-backend
